--- a/blogs/2020.04.18_Synthetic_Labor_is_now_available_for_Aragon_DAOs_with_meTokens.md
+++ b/blogs/2020.04.18_Synthetic_Labor_is_now_available_for_Aragon_DAOs_with_meTokens.md
@@ -6,7 +6,7 @@
 
 ## Coordination with Aragon
 
-[Aragon](https://aragon.org/) is one of the [most popular DAO frameworks](https://poweredby.aragon.org/) in the Ethereum ecosystem today. Its tools are designed to empower individuals with the ability to [self-organize in unstoppable ways](https://blog.aragon.org/the-aragon-manifesto-4a21212eac03/_. Most of the applications currently available to Aragon users are built to assist members with internal coordination, [including voting, budgeting, and payroll](https://mainnet.aragon.org/#/governance.aragonproject.eth_.
+[Aragon](https://aragon.org/) is one of the [most popular DAO frameworks](https://poweredby.aragon.org/) in the Ethereum ecosystem today. Its tools are designed to empower individuals with the ability to [self-organize in unstoppable ways](https://blog.aragon.org/the-aragon-manifesto-4a21212eac03/_). Most of the applications currently available to Aragon users are built to assist members with internal coordination, [including voting, budgeting, and payroll](https://mainnet.aragon.org/#/governance.aragonproject.eth_.
 
 While internal coordination is immensely useful for DAOs to be able to push value out into the world, it’s not as particularly useful in coordinating with external actors who wish to pull value from the members directly. That is to say, DAOs do not yet have an incentivized way of responding to “pull requests” from individuals or other DAOs outside the organization.
 
