--- a/blogs/2020.04.18_Synthetic_Labor_is_now_available_for_Aragon_DAOs_with_meTokens.md
+++ b/blogs/2020.04.18_Synthetic_Labor_is_now_available_for_Aragon_DAOs_with_meTokens.md
@@ -2,7 +2,7 @@
 
 *meToken is a new primitive that allows Aragon DAOs to create thier own currency, which we call “Synthetic Labor.” An Aragon DAO’s meToken can be used to pay for DAO services by external community members, and it can be used as a speculative financial vehicle for investors. meTokens are designed to create new revenue streams for Aragon DAOs and to assist them in discovering market-fit for their operations.*
 
-![](../images/meTokens_Aragon.png)
+![](../images/covers/meTokens_Aragon.png)
 
 ## Coordination with Aragon
 
@@ -26,7 +26,7 @@ If the integration is successful, then said community members may continue to ho
 
 meTokens are minted along a bonding curve. Bonding curves are unique in that they reward spenders and speculators who buy meTokens early. The earlier you buy, the more leverage you have to either spend the meToken with additional buying power or sell the meToken for a profit.
 
-![](../images/Bonding_Curve.png)
+![](../images/graphics/Bonding_Curve.png)
 
 Individuals buy meTokens directly from the [bonding curve](https://medium.com/linum-labs/intro-to-bonding-curves-and-shapes-bf326bc4e11a) at the buy rate by depositing collateral into the curve. As more people buy from the curve, new meTokens are minted — the total supply increases — and the price appreciates. The growth of supply and price are fixed to a preset rate (this is the “curve”).
 
