--- a/blogs/20202.05.05_meTokens_are_Integrated_with_ENS.md
+++ b/blogs/20202.05.05_meTokens_are_Integrated_with_ENS.md
@@ -63,4 +63,4 @@ Once you have your ENS Subdomain setup, you can begin sharing it with your commu
 
 ---
 
-If you liked this article and want to support the author or the meTokens project, you can stake some ETH on StakeOnMe.ChrisRobison.eth. You'll be sent $CBOB in return. Requests to spend $CBOB can be made by tweeting [@CBobRobison](twitter.com/cbobrobison) (DMs are always open).
+If you liked this article and want to support the author or the meTokens project, you can stake some ETH on StakeOnMe.ChrisRobison.eth. You'll be sent ($CBOB)[https://stakeonme.com/Token/0x3C335B7AC0b5ACe65Bd096E748473030c4030302] in return. Requests to spend ($CBOB)[https://stakeonme.com/Token/0x3C335B7AC0b5ACe65Bd096E748473030c4030302] can be made by tweeting [@CBobRobison](twitter.com/cbobrobison) (DMs are always open).
