--- a/blogs/20202.05.05_meTokens_are_Integrated_with_ENS.md
+++ b/blogs/20202.05.05_meTokens_are_Integrated_with_ENS.md
@@ -1,6 +1,6 @@
 # meTokens are Integrated with ENS
 
-*A simple interface to connect your meToken with your ENS domain has been added to StakeOnMe.com. Now your community members can invest in your simply by sending ETH to your StakeOnMe.<YourDomain>.eth address. Instructions below.*
+*A simple interface to connect your meToken with your ENS domain has been added to StakeOnMe.com. Now your community members can invest in your simply by sending ETH to your StakeOnMe.<'YourDomain'>.eth address. Instructions below.*
 
 ![](/images/covers/meTokens_ENS.png)
 
